--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-search fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Search</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Lucene based search engines be it an elasticsearch or solr</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -111,9 +111,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Web Based development</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>With the advent of the internet age every company wishes to be on the internet just to reach out to a wider audience. But in order to make sure that you make a good first impression it is essential that you get your website designed by a professional since they are fully aware of the nooks and crannies of web design India. Webzguru is one such company which has carved out a niche for itself in this field. We provide high quality web development services at affordable prices. Customer satisfaction, adherence to deadlines and commitment to quality are our forte which helps us stand apart.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -124,9 +124,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Ecommerce web design</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>The main motive behind Ecommerce web design India is to facilitate selling and buying products online. It is one of the most efficient and effective way of conducting business. Any well-developed site is capable of boosting online sales adding to the business’s profitability. The website must be capable of showing the complete product range that the company has to offer. Webzguru offers the best ecommerce web design solutions which can help you to gain foothold in the web world. We employ some of the best web designers who are skilled enough to design a well-structured website for your business to give the ultimate shopping experience.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -137,9 +137,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Data crawal</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>The main motive behind Ecommerce web design India is to facilitate selling and buying products online. It is one of the most efficient and effective way of conducting business. Any well-developed site is capable of boosting online sales adding to the business’s profitability. The website must be capable of showing the complete product range that the company has to offer. Webzguru offers the best ecommerce web design solutions which can help you to gain foothold in the web world. We employ some of the best web designers who are skilled enough to design a well-structured website for your business to give the ultimate shopping experience.</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
@@ -257,7 +257,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Website 2014</p>
+                    <p class="text-muted">Copyright &copy; webkitez 2016</p>
                 </div>
             </div>
         </div>
