--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
     <aside class="callout">
         <div class="text-vertical-center">
             <h1>Vertically Centered Text</h1>
+            <form action="https://formspree.io/your@email.com"
+      method="POST">
+    <input type="text" name="name">
+    <input type="email" name="_replyto">
+    <input type="submit" value="Send">
+</form>
         </div>
     </aside>
 
@@ -208,7 +214,7 @@
     </section>
 
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
+    <!--<aside class="call-to-action bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -218,7 +224,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside> -->
 
     <!-- Map -->
     <section id="contact" class="map">
